Word Wrapping fixed - No unwanted word cuts any more

--- a/docroot/_diffs/css/custom_pa.css
+++ b/docroot/_diffs/css/custom_pa.css
@@ -30,8 +30,24 @@
 
 }
 
-
-
+/* ---------- Word Wrapping ---------- */
+/* Avoid breaking words on not allowed breakpoints*/
+.aui pre, 
+.aui .navbar .nav li > a,
+.html-editor.portlet-message-boards,
+.aui .portlet-asset-publisher .asset-content,
+.aui .portlet-asset-publisher .asset-summary,
+.aui .portlet-asset-publisher .asset-title,
+.aui .portlet-asset-publisher .header-title,
+.aui .portlet-asset-publisher li.title-list, 
+.aui .portlet-blogs .entry-body, 
+.aui .portlet-blogs .entry-title, 
+.aui .portlet-blogs .header-title, 
+.aui .portlet-journal-content .journal-content-article, 
+.aui .portlet-message-boards .header-title, 
+.aui .portlet-message-boards .thread-body {
+	word-break: normal;
+}
 
 /* ---------- logo ---------- */
 .logo{
